[package]
name = "hyperbitbit"
version = "0.0.1"
authors = ["Nikolay Novik <nickolainovik@gmail.com>"]
edition = "2018"

readme = "README.md"
description = "Implementation of HyperBitBit data structure"

homepage = "https://github.com/jettify/hyperbitbit"
repository = "https://github.com/jettify/hyperbitbit.git"

keywords = ["sampling", "statistics", "analytics"]
categories = ["data-structures"]

license = "Apache-2.0"

[dependencies]

[dev-dependencies]
rand = "0.7.0"

[profile.release]
debug=true

[profile.bench]
debug=true
